# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: python-ci.yml
page_analyzer/: app.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/urls/: index.html  show.html
templates/: index.html
